--- a/my-app/src/styles/main-block.css
+++ b/my-app/src/styles/main-block.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   gap: 20px;
   padding: 0px;
-  margin-top: 50px; 
+  margin-top: 45px !important; 
   min-height: calc(60vh - 150px);
 }
 
