--- a/my-app/src/styles/header.css
+++ b/my-app/src/styles/header.css
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     right: 0;
-    background-color: #E3E2DE;
+    background-color: #FBEACC;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -27,13 +27,14 @@
     position: absolute;
     top: 100%;
     left: 0;
-    background: #E3E2DE;
+    background: #501205;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     border-radius: 5px;
     padding: 10px 0;
     min-width: 280px;
     display: none;
     z-index: 1000;
+    opacity: 75%;
 }
 
 .headerlabel-container:hover .dropdown-menu {
@@ -48,7 +49,7 @@
 
 .dropdown-item-link {
     text-decoration: none;
-    color: rgb(102, 123, 89);
+    color: #FBEACC;
     font-size: 1.1rem;
     transition: color 0.2s ease;
 }
