--- a/my-app/src/styles/index.css
+++ b/my-app/src/styles/index.css
@@ -12,9 +12,10 @@ body {
     font-family: 'Jaro', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: rgb(227, 226, 222);
+    background-color: #FBEACC;
     min-height: 100vh;
     scroll-behavior: smooth;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
+    overflow-x: hidden;
 }
