--- a/my-app/src/styles/main-block.css
+++ b/my-app/src/styles/main-block.css
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 20px;
-  padding: 0px;
-  margin-top: 45px !important; 
+  padding: 0px !important;
+  margin-top: 63px !important; 
   min-height: calc(60vh - 150px);
 }
 
@@ -14,7 +13,6 @@
   min-width: 0;
   background: #EDEDED;
   padding: 0px 20px 20px 20px;
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -128,6 +126,12 @@
 }
 
 
+.map-container {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    
+}
 
 
 body {
