--- a/my-app/src/styles/slider.css
+++ b/my-app/src/styles/slider.css
@@ -1,10 +1,18 @@
-.slider-container {
+.main-content-row {
+    display: flex;
+    width: 100%;
+    margin-bottom: 30px;
+    padding: 0px !important;
+}
+
+ .slider-container {
     position: relative;
-    width: 100vw;
-    height: 650px;
+    width: 70vw;
+    height: 750px;
     overflow: hidden;
     margin-left: calc(-50vw + 50%);
-}
+    
+} 
 
 .slider-wrapper {
     display: flex;
@@ -13,29 +21,29 @@
     transition: transform 0.5s ease;
 }
 
-.slide {
-    width: 100vw;
+ .slide {
+    width: 70vw;
     height: 100%;
     flex-shrink: 0;
-}
+} 
 
 .slide img {
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    object-fit:fill;
 }
 
 .slider-arrow {
     position: absolute;
-    top: 50%;
+    top: 50%; 
     transform: translateY(-50%);
-    background: #E3E2DE;
+    background:  #FBEACC;
     border: none;
     font-size: 2rem;
-    color: rgb(102, 123, 89);
-    border-radius: 50%; /* круглый фон */
-    width: 50px; /* фиксированная ширина */
-    height: 50px; /* фиксированная высота */
+    color: #E3E2DE;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,4 +64,51 @@
 
 .slider-arrow.next {
     right: 20px;
+}
+
+
+
+
+
+/* Video styles*/
+
+.video-container {
+    flex: 1;
+    min-width: 0;
+    display: flex;
+    flex-direction: column;
+    height: 750px;
+}
+
+
+.video-wrapper {
+    flex: 1;
+    min-height: 0;
+    overflow: hidden;
+    background: #000;
+}
+
+.video-player {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+
+/* Адаптивность */
+@media (max-width: 1024px) {
+    .main-content-row {
+        flex-direction: column;
+    }
+    
+    .slider-container {
+        width: 100%;
+        height: 500px;
+    }
+    
+    .video-container {
+        width: 100%;
+        height: 400px;
+    }
 }
