--- a/my-app/src/styles/slider.css
+++ b/my-app/src/styles/slider.css
@@ -37,7 +37,7 @@
     position: absolute;
     top: 50%; 
     transform: translateY(-50%);
-    background:  #FBEACC;
+    background:  #F6F5EC;
     border: none;
     font-size: 2rem;
     color: #E3E2DE;
