--- a/my-app/src/styles/index.css
+++ b/my-app/src/styles/index.css
@@ -1,3 +1,4 @@
+
 .avatar {
     border-radius: 70%;
 }
@@ -12,7 +13,7 @@ body {
     font-family: 'Jaro', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #FBEACC;
+    background-color: #F5ECDB;
     min-height: 100vh;
     scroll-behavior: smooth;
     text-rendering: optimizeSpeed;
