--- a/my-app/src/styles/main-block.css
+++ b/my-app/src/styles/main-block.css
@@ -11,7 +11,6 @@
 
 /* Стили для блоков banner и gallery */
 .main-block-banner{
-  width: 40%;
   min-width: 0;
   background: #D3BDA4;
   padding: 0px 20px 20px 20px;
@@ -19,8 +18,6 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  max-height: 550px;
-
 }
 
 .main-block-gallery {
@@ -85,8 +82,9 @@
     max-width: 1300px;
     margin: 0 auto;
     padding: 40px 20px;
-    background: white;
+    background: #F5ECDB;
     color: #2c1810;
+    border-radius: 15px;
 }
 
 .menu-header {
@@ -334,7 +332,8 @@
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
-    
+    position: relative;
+    overflow: hidden;
 }
 
 
