--- a/my-app/src/styles/main-block/review.css
+++ b/my-app/src/styles/main-block/review.css
@@ -20,8 +20,6 @@
     color: #3C2B17;
     margin-bottom: 20px;
     margin-top: 0px;
-    width: 100%;
-    max-width: 1200px;
 }
 
 .review-container {
@@ -40,6 +38,7 @@
     overflow: hidden;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    background-color: #F5ECDB;
 }
 
 /* Адаптивность для разных экранов */
@@ -102,4 +101,9 @@
 .review-block-banner {
     max-width: 100vw;
     overflow-x: hidden;
+}
+
+.review-iframe-wrapper__iframe {
+    border: 0;
+    background-color: #F5ECDB;
 }
