--- a/my-app/src/components/Header/Header.css
+++ b/my-app/src/components/Header/Header.css
@@ -12,3 +12,24 @@
     z-index: 100;
     
 }
+
+/* 4K */
+@media (min-width: 2560px) {
+  .header {
+    padding: 20px 100px;
+  }
+}
+
+/* Планшеты */
+@media (max-width: 1024px) {
+  .header {
+    padding: 10px 24px;
+  }
+}
+
+/* Смартфоны */
+@media (max-width: 768px) {
+  .header {
+    padding: 8px 16px;
+  }
+}
